ubiquity (2.7.10) UNRELEASED; urgency=low

  [ Harald Sitter ]
  * [KDE] Fix language selection comobox position within grid (LP: #743062)
  * [KDE] Make intro label miminum expanding, otherwise word wrap will not
    work for vast amounts of text

  [ Evan Dandrea ]
  * Unset UBUNTU_MENUPROXY so our custom panel doesn't lose its
    indicators (LP: #837287).
  * Port the panel to GTK3.

  [ Stéphane Graber ]
  * Change wallpapeer C program to accept a path to a wallpaper as a parameter.
  * Update ubiquity-dm to set the right wallpaper for Edubuntu.
  * Fix ibus in Ubiquity (LP: #838850)

 -- Stéphane Graber <stgraber@ubuntu.com>  Sun, 18 Sep 2011 18:40:07 -0400

ubiquity (2.7.29) oneiric; urgency=low

  * Add power indicator to the installer panel.
  * Handle APs going away while trying to query their properties
    (LP: #838068).
  * Use a small C program to set the desktop wallpaper (LP: #830061).
  * Update translations from Launchpad.
  * Automatic update of included source packages: flash-kernel
    2.28ubuntu31, partman-base 151ubuntu1.

 -- Evan Dandrea <ev@ubuntu.com>  Thu, 15 Sep 2011 10:47:19 +0100

ubiquity (2.7.28) oneiric; urgency=low

  [ Stéphane Graber ]
  * Update stepUserInfo.ui to trigger info_loop() when the hostname is changed.
    (LP: #828181)

  [ Mario Limonciello ]
  * Reorder the imports in oem-config-remove-gtk to fix an import error due
    the fallbacks in aptdaemon. (LP: #837288)
  * Show the wireless page after either prepare or language to make sure
    it shows in both ubiquity and oem-config modes.
  * Call out to find_next_step even on non debconf driven pages. (LP: #843237)
  * Don't assume /target is where the new face is being put.
  * When the installer crashes, file a bug using apport-bug rather than
    directing users to a terminal window. (LP: #843933)
  * Fix the colors in the oem-config language selector. (LP: #838672)
  * Automatic update of included source packages: netcfg 1.68ubuntu2,
    user-setup 1.28ubuntu20.
