@@ -9,6 +9,9 @@ ubiquity (2.7.10) UNRELEASED; urgency=low
   * Unset UBUNTU_MENUPROXY so our custom panel doesn't lose its
     indicators (LP: #837287).
   * Port the panel to GTK3.
+  * Manually connect the activate-link signal on the advanced
+    partitioning tool link on the automatic partitioning page.
+    GtkBuilder signal mapping appears to be broken (LP: #852054).
 
   [ Stéphane Graber ]
   * Change wallpapeer C program to accept a path to a wallpaper as a parameter.
